--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ h3 {
     transition: var(--transition-delay);
 }
 
-.container-fluid{
+#title .container-fluid{
     padding: 3% 15% 7%;
 }
 
@@ -52,7 +52,7 @@ h3 {
 
 .navbar-brand{
     font-family: 'Ubuntu';
-    font-size: 2.5rem;
+    font-size: 3rem;
     line-height: var(--line-height);
 }
 
@@ -181,7 +181,27 @@ h3 {
 }
 
 
+
 /*media queries*/
+@media (max-width: 768px) {
+    .download-button{
+        font-size: 2.5rem;
+    }
+
+    .navbar-toggler{
+        font-size: 3rem;
+    }
+
+    .navbar-brand{
+        font-size: 3rem;
+    }
+
+    .icon-container i{
+        font-size: 2rem;
+        padding: 5%;
+    }
+
+ }
 
 @media (max-width: 1028px){
     .title-image{
@@ -195,10 +215,11 @@ h3 {
     .download-button{
         margin: 5% 1% 5% 0;
     }
-}
 
-@media (max-width: 990px){
-    .title-image{
-        transform: none;
+    #title .container-fluid{
+        padding: 3% 10% 7%;
     }
 }
+
+
+
